<resources>
    <string name="app_name">Four Souls Stats</string>
    <string name="error_placeholder">If You Are Seeing This, There\'s A Bug</string>
    <string name="back_to_main_1">Return to Main Menu</string>
    <string name="back_to_main_2">Return to\nMain Menu</string>
    <string name="back_to_settings">Back To Settings</string>
    <string name="common_x" translatable="false">X</string>
    <string name="icon_description">Set Icon</string>
    <string name="generic_dismiss">OK</string>
    <string name="main_title">The Binding Of Isaac: 4 Souls Statistics Tracker</string>
    <string name="main_stats_button">View\nStatistics</string>
    <string name="main_enter_data">Enter\nGame Data</string>
    <string name="main_edit_button">Edit\nGames</string>
    <string name="main_settings_button">App\nSettings</string>
    <string name="main_thanks_button">Thanks</string>
    <string name="main_error_button">Feedback &amp;\nSuggestions</string>
    <string name="input_title">Input Game Data</string>
    <string name="input_no_players">Number of Players:</string>
    <string name="input_default_players" translatable="false">4</string>
    <string name="input_no_treasures">Number of Starting Treasures:</string>
    <string name="input_default_treasures" translatable="false">0</string>
    <string name="input_continue_button">Input Game\nResults</string>
    <string name="input_too_few">Not All Data Filled In</string>
    <string name="input_co_op">Play in Co-Op:</string>
    <string name="input_card_char_title">Character:</string>
    <string name="input_card_content_desc">Character Card</string>
    <string name="card_player">Player:</string>
    <string name="card_eternal">Eternal:</string>
    <string name="add_player_1">Add</string>
    <string name="add_player_2">To Player List</string>
    <string name="input_no_turns">Turns Left:</string>
    <string name="result_continue">Save\nResult</string>
    <string name="input_default_turns" translatable="false">8</string>
    <string name="result_wrong_count">There Needs To Be Exactly 1 Winner</string>
    <string name="result_pass_on">Game Saved</string>
    <string name="result_go_back">Change\nGame Setup</string>
    <string name="card_souls">Souls:</string>
    <string name="card_winner">Winner:</string>
    <string name="win_card_default_souls" translatable="false">0</string>
    <string name="win_starting_item">Starting Item:</string>
    <string name="stats_no_local">There are no games stored for this playgroup</string>
    <string name="stats_no_wifi">Online statistics require a wi-fi connection to access. Please try again later</string>
    <string name="stats_no_data">There is no data to view right now. Please connect to wi-fi or input some games</string>
    <string name="stats_treasures">Treasures:</string>
    <string name="stats_players">Players:</string>
    <string name="stats_filter">Filter By:</string>
    <string name="stats_return">Return To\nStatistics Page</string>
    <string name="stats_change_header">Change Shown Data</string>
    <string name="player_stats_title">Player\nStatistics</string>
    <string name="character_stats_title">Character\nStatistics</string>
    <string name="eternal_stats_title">Eternal Item\nStatistics</string>
    <string name="player_table_header">Player</string>
    <string name="character_table_header">Character</string>
    <string name="eternal_table_header">Eternal Item</string>
    <string name="stats_table_winrate">Win Rate</string>
    <string name="stats_table_wins">Total Wins</string>
    <string name="stats_table_soulrate">Average Souls</string>
    <string name="stats_table_souls">Total Souls</string>
    <string name="stats_table_adjusted_soulrate">Average Adjusted Souls</string>
    <string name="stats_table_adjusted_soulrate_explained">Average Adjusted Souls\n<i>Adjusted souls are the number of souls, multiplied by the number of players in the game</i></string>
    <string name="stats_table_adjusted_souls">Total Adjusted Souls</string>
    <string name="stats_table_adjusted_souls_explained">Total Adjusted Souls\n<i>Adjusted souls are the number of souls, multiplied by the number of players in the game</i></string>
    <string name="stats_table_turns_remaining">Average Turns Remaining</string>
    <string name="stats_table_played">Games Played</string>
    <string name="select_3_headers">Wrong number of headers selected.\\nPlease select exactly 3 headers</string>
    <string name="stats_table_entry" translatable="false">%.2f</string>
    <string name="settings_title">Settings</string>
    <string name="settings_group_id">Group ID:</string>
    <string name="settings_group_id_explain">Group ID must contain 6 letters, numbers or symbols</string>
    <string name="settings_invalid_group">Input group ID was too short and has been reset</string>
    <string name="settings_duplicate_group">Input group ID already exists. If this is not your group, use another ID</string>
    <string name="settings_overwrite_data">Changing group ID will delete any games not uploaded</string>
    <string name="settings_confirm_overwrite">Change Group ID</string>
    <string name="settings_cancel_overwrite">Reset Group ID</string>
    <string name="settings_online_sync">Sync Online:</string>
    <string name="edition_prompt">Use Cards From :</string>
    <string name="settings_gold">Gold Box :</string>
    <string name="settings_plus">Four Souls+ :</string>
    <string name="settings_requiem">Requiem :</string>
    <string name="settings_warp">Warp Zones :</string>
    <string name="settings_promo">Promo :</string>
    <string name="icon_alt_art">Alt Art</string>
    <string name="icon_base">Base Game</string>
    <string name="icon_bumbo">The Legend of Bum-bo!</string>
    <string name="icon_custom">Custom Cards</string>
    <string name="icon_gfuel">G-Fuel</string>
    <string name="icon_gish">Gish</string>
    <string name="icon_gold">Gold Box</string>
    <string name="icon_plus">Four Souls +</string>
    <string name="icon_promo">Promo</string>
    <string name="icon_requiem">Requiem</string>
    <string name="icon_retro">Retro</string>
    <string name="icon_summer">Summer of Isaac</string>
    <string name="icon_tapeworm">Tapeworm</string>
    <string name="icon_target">Target</string>
    <string name="icon_unboxing">Unboxing of Isaac</string>
    <string name="icon_warp">Warp Zones</string>
    <string name="icon_youtooz" translatable="false">Youtooz</string>
    <string name="settings_custom">Custom :</string>
    <string name="settings_enter_custom">Add Custom Cards</string>
    <string name="settings_pixel_font">Use Retro Eden Font:</string>
    <string name="settings_alt_art">Use Character Alt Art :</string>
    <string name="settings_border_prompt">Border :</string>
    <string name="settings_background_prompt">Background :</string>
    <string name="settings_readable_font">Use A Readable Font :</string>
    <string name="settings_reroll_icon">Select Reroll Button Icons</string>
    <string name="settings_reroll_eternal">Randomise Eden Eternal</string>
    <string name="settings_reroll_duplicates">Allow Random Duplicates</string>
    <string name="settings_reroll_duplicates_eden">Allow Random Eden Duplicates</string>
    <string name="reroll_no_icons">No reroll icon selected - please select at least 1.</string>
    <string name="reroll_suggest_icon">Suggest New Icon</string>
    <string name="reroll_title">Select Reroll Icons</string>
    <string name="settings_clear_data">Clear All\nStored Data</string>
    <string name="settings_delete_data">Are you sure you want to delete all data?
        \nThis will remove any names, games and custom characters not used by your currently selected group.
        Any games not uploaded will be lost forever.</string>
    <string name="settings_cancel_delete">Keep Data</string>
    <string name="settings_confirm_delete">Delete Data</string>
    <string name="settings_reset_tutorial">Reset\nTutorial</string>
    <string name="settings_show_patch_notes">Show All Patch Notes</string>
    <string name="custom_title">Custom Cards</string>
    <string name="custom_cancel">Cancel</string>
    <string name="custom_characters">Custom Characters</string>
    <string name="custom_add_character">Add Character</string>
    <string name="custom_items">Custom Items</string>
    <string name="custom_add_item">Add Item</string>
    <string name="custom_character">Custom Character</string>
    <string name="custom_item">Custom Item</string>
    <string name="character_back">Character Back</string>
    <string name="eternal_back">Eternal Back</string>
    <string name="loot_back">Loot Back</string>
    <string name="monster_back">Monster Back</string>
    <string name="soul_back">Soul Back</string>
    <string name="treasure_back">Treasure Back</string>
    <string name="room_back">Room Back</string>
    <string name="thanks_title">Thanks To …</string>
    <string name="thanks_fonts">Four Souls fonts (font-souls) created by <a href="https://github.com/AssisrMatheus/font-souls">AssisrMatheus</a>.
    Retro font created by me, based on the font used in the Retro Eden card which does not have an artist on record</string>
    <string name="thanks_backgrounds">Buttons and blank character card from images created by
        <a href="https://www.reddit.com/r/FourSouls/comments/jtriv2/templates_and_fonts_for_making_custom_cards/">
            u/Koretex_</a> for the Four Souls Reddit</string>
    <string name="thanks_friends">And thanks to my friends their support, inspiration and ultimately for playing Four Souls with me</string>
    <string name="thanks_edmund">Four Souls was created and designed by Edmund McMillen (<a href="https://twitter.com/edmundmcmillen">@edmundmcmillen</a>),
        and developed by <a href="https://maestromedia.com/">Maestro Media</a>. Thanks to them for being so supportive of the community,
        as well as providing high quality images of the cards in the game freely</string>
    <string name="thanks_cards">Other card images, set icons and item categories from <a href="https://foursouls.com/">foursouls.com</a>.
    Thanks to the team that runs and maintains the website for their dedication and hard work</string>
    <string name="tutorial_language" translatable="false">
        Click the flag to change between languages\t / \t
        Haga clic en la bandera para cambiar entre idiomas\t / \t
        Cliquez sur le drapeau pour changer de langue\t / \t
        Clicca sulla bandiera per cambiare lingua\t / \t
        Klicken Sie auf die Flagge, um zwischen den Sprachen zu wechseln\n
        Click anywhere to continue
    </string>
    <string name="tutorial_show_tutorial">Would you like to view the tutorial?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="tutorial_data">Input game data using this button</string>
    <string name="tutorial_stats">View your group\'s statistics, as well as average statistics for the whole community, using this button</string>
    <string name="edit_title">Edit / Remove Games</string>
    <string name="edit_select_game">Select A Game To Edit:</string>
    <string name="adjust_title">Edit Game</string>
    <string name="adjust_submit">Submit Change</string>
    <string name="adjust_delete">Delete Game</string>
    <string name="feedback_title">Feedback</string>
    <string name="feedback_preference">The preferred method of receiving feedback is via GitHub, so please use that where possible. 
        Otherwise, links are provided to send emails.\nTranslation offers are appreciated, and should be sent via email.</string>
    <string name="feedback_github_report">Github Report</string>
    <string name="feedback_bug">Email a Bug Report</string>
    <string name="feedback_suggestion">Email a Suggestion</string>
    <string name="feedback_translate">Offer to Translate</string>
</resources>