<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditSettings">

    <ImageView
        android:id="@+id/background"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@color/purple_200"

        android:src="@drawable/border_treasure_back"
        android:scaleType="fitXY"/>
    
    <TextView
        android:id="@+id/settingsTitle"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:text="@string/settings_title"
        android:fontFamily="@font/four_souls_title"
        android:textSize="30sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/editionSelect"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/settingsTitle"
        app:layout_constraintBottom_toTopOf="@id/altSwitch">

        <TextView
            android:id="@+id/settingsEditionPrompt"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:text="@string/character_prompt"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/goldSwitch"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/settingsEditionPrompt"
            app:layout_constraintBottom_toTopOf="@id/requiemSwitch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/plusSwitch"

            app:switchPadding="20dp"

            android:text="@string/settings_gold" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/plusSwitch"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/goldSwitch"
            app:layout_constraintStart_toEndOf="@id/goldSwitch"
            app:layout_constraintEnd_toEndOf="parent"

            app:switchPadding="20dp"

            android:text="@string/settings_plus" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/requiemSwitch"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/goldSwitch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/plusSwitch"

            app:switchPadding="20dp"

            android:text="@string/settings_requiem" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/warpSwitch"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/requiemSwitch"
            app:layout_constraintStart_toEndOf="@id/goldSwitch"
            app:layout_constraintEnd_toEndOf="parent"

            app:switchPadding="20dp"

            android:text="@string/settings_warp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/altSwitch"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editionSelect"
        app:layout_constraintBottom_toTopOf="@id/readableSwitch"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="20dp"

        app:switchPadding="20dp"

        android:text="@string/settings_alt_art" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/readableSwitch"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/altSwitch"
        app:layout_constraintBottom_toTopOf="@id/settingsMainButton"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="20dp"

        app:switchPadding="20dp"

        android:fontFamily="@font/roboto_regular"
        android:text="@string/settings_readable_font" />


    <Button
        android:id="@+id/settingsMainButton"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:textAllCaps="false"
        android:text="@string/back_to_main"/>

</androidx.constraintlayout.widget.ConstraintLayout>